# uncodeuncle

./: .gitignore  SKILL.md  pyproject.toml
agents/: fragment-generator.md  openai.yaml  orchestrator.md  planner.md  validator.md
libs/: README.md
references/: color-palettes.md  component-contracts.json  echarts-config.md  style-guide.md
scripts/: assemble.py  assemble_engine.py  assembly_builder.py  assembly_output.py  assembly_service.py  assembly_types.py  build_anchor_index.py  build_base_styles.py  check_phase_contract.py  export_pdf.py  fragment_sanitizer.py  insertion_planner.py  layout_probe.py  lint_fragments.py  normalize_fragments.py  pipeline_common.py  prepare_recommendations.py  qa_html.py  qa_layout.py  qa_pdf.py  qa_visual.py  recommendation_loader.py  recommendation_state.py  repair_layout.py  report_contract.py  run_pipeline.py  run_pipeline_parallel.py  smoke_e2e.py  theme_resolver.py  visual_layout.py
templates/prompts/: generator-task.md  validator-task.md
templates/static/: base-styles.css  pdf-export.js
tests/: test_assemble_engine_compat.py  test_assemble_positions.py  test_assembly_output.py  test_contract_precision.py  test_fragment_normalization.py  test_fragment_sanitizer.py  test_insertion_planner.py  test_layout_probe.py  test_layout_state.py  test_pipeline_entrypoints.py  test_prompt_reference_consistency.py  test_recommendation_preparation.py  test_report_contract.py  test_robustness_fixes.py  test_self_contained_output.py  test_smoke_e2e.py  test_theme_resolver.py  test_visual_layout.py  test_visual_qa.py
(+6 files in other folders)
